RetroCraftsIndia: Update keywords

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<meta property="og:title" content="Retro Crafts India">
 	<meta property="og:description"
 		content="Where Timeless Craftsmanship Meets Modern Elegance - Retro Crafts India is a great dealer in indian handicrafts dealing with decorative items including home decor, etc.">
+	<meta name="keywords"
+		content="Handcrafted products, Indian handicrafts, Artisan home décor, Unique handmade items, Traditional Indian craftsmanship, Handicraft gifts, Sustainable artisan products, Fair trade handicrafts, Modern handcrafted designs, Handmade home accessories, Craftsmanship from India, Artisanal home décor, Custom handmade crafts, Indian cultural crafts, Authentic handcrafted art, Handicraft furniture, Eco-friendly crafts, Handmade jewelry, Indian art collectibles, Decorative handicrafts, Handwoven textiles, Hand-painted pottery, Wooden handicrafts, Handmade sculptures, Bohemian home décor, Vintage Indian crafts, Cultural heritage products, Luxury handicrafts, Contemporary crafts, Handmade tableware, Ethnic crafts, Artisan candles, Traditional weaving, Handmade wall art">
 	<meta property="og:url" content="https://retrocraftsindia.com/">
 	<meta property="og:site_name" content="Retro Crafts India">
 	<meta property="og:image"
