--- a/index.html
+++ b/index.html
@@ -2478,7 +2478,7 @@
 		}
 
 		.wp-container-core-group-is-layout-15 {
-			gap: var(--wp--preset--spacing--10);
+			gap: 0.5rem;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
@@ -3081,7 +3081,7 @@
 
 		<footer class="wp-block-template-part">
 			<div class="wp-block-group alignfull bg-gray-dark has-contrast-color has-text-color is-vertical is-content-justification-center is-layout-flex wp-container-core-group-is-layout-15 wp-block-group-is-layout-flex"
-				style="min-height:33vh;margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--10);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--10);padding-left:var(--wp--preset--spacing--50)">
+				style="min-height:20vh;margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--50)">
 				<div style="margin-bottom:6px;" class="aligncenter wp-block-site-logo"><a
 						href="https://retrocraftsindia.com/" class="custom-logo-link" rel="home"
 						aria-current="page"><img width="39" height="39"
