RetroCraftsIndia: Update [About-US]
Signed-off-by: Mohd Faraz <androiabledroid@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v23.4 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO Premium plugin v23.4 (Yoast SEO v23.4) - https://yoast.com/wordpress/plugins/seo/ -->
 	<meta name="description"
 		content="Where Timeless Craftsmanship Meets Modern Elegance - Retro Crafts India is a great dealer in indian handicrafts dealing with decorative items including home decor, etc.">
 	<link rel="canonical" href="https://retrocraftsindia.com/">
@@ -15,8 +15,6 @@
 	<meta property="og:title" content="Retro Crafts India">
 	<meta property="og:description"
 		content="Where Timeless Craftsmanship Meets Modern Elegance - Retro Crafts India is a great dealer in indian handicrafts dealing with decorative items including home decor, etc.">
-	<meta name="keywords"
-		content="Handcrafted products, Indian handicrafts, Artisan home décor, Unique handmade items, Traditional Indian craftsmanship, Handicraft gifts, Sustainable artisan products, Fair trade handicrafts, Modern handcrafted designs, Handmade home accessories, Craftsmanship from India, Artisanal home décor, Custom handmade crafts, Indian cultural crafts, Authentic handcrafted art, Handicraft furniture, Eco-friendly crafts, Handmade jewelry, Indian art collectibles, Decorative handicrafts, Handwoven textiles, Hand-painted pottery, Wooden handicrafts, Handmade sculptures, Bohemian home décor, Vintage Indian crafts, Cultural heritage products, Luxury handicrafts, Contemporary crafts, Handmade tableware, Ethnic crafts, Artisan candles, Traditional weaving, Handmade wall art">
 	<meta property="og:url" content="https://retrocraftsindia.com/">
 	<meta property="og:site_name" content="Retro Crafts India">
 	<meta property="og:image"
@@ -108,7 +106,7 @@
 	        }
 	    ]
 	}</script>
-	<!-- / Yoast SEO plugin. -->
+	<!-- / Yoast SEO Premium plugin. -->
 
 
 	<title>Retro Crafts India - Where Timeless Craftsmanship Meets Modern Elegance</title>
