--- a/products/index.html
+++ b/products/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v23.4 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO Premium plugin v23.4 (Yoast SEO v23.4) - https://yoast.com/wordpress/plugins/seo/ -->
 	<meta name="description"
 		content="Retro Crafts India offers handcrafted, artisan products blending traditional Indian craftsmanship with modern designs to bring unique arts">
 	<link rel="canonical" href="https://retrocraftsindia.com/products/">
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="Products - Retro Crafts India">
+	<meta property="og:title" content="Products">
 	<meta property="og:description"
 		content="Retro Crafts India offers handcrafted, artisan products blending traditional Indian craftsmanship with modern designs to bring unique arts">
 	<meta property="og:url" content="https://retrocraftsindia.com/products/">
@@ -135,7 +135,7 @@
 	        }
 	    ]
 	}</script>
-	<!-- / Yoast SEO plugin. -->
+	<!-- / Yoast SEO Premium plugin. -->
 
 
 	<title>Products - Retro Crafts India</title>
