--- a/404/index.html
+++ b/404/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="noindex, follow">
 
-	<!-- This site is optimized with the Yoast SEO plugin v23.4 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO Premium plugin v23.4 (Yoast SEO v23.4) - https://yoast.com/wordpress/plugins/seo/ -->
 	<meta property="og:locale" content="en_US">
 	<meta property="og:title" content="Page not found - Retro Crafts India">
 	<meta property="og:site_name" content="Retro Crafts India">
@@ -65,7 +65,7 @@
 	        }
 	    ]
 	}</script>
-	<!-- / Yoast SEO plugin. -->
+	<!-- / Yoast SEO Premium plugin. -->
 
 
 	<title>Page not found - Retro Crafts India</title>
