RetroCraftsIndia: Update points
Signed-off-by: Mohd Faraz <androiabledroid@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2834,13 +2834,13 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-1 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Renovation and restoration</h3>
+							style="font-style:normal;font-weight:600">Custom Furniture & Décor Design</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
+							Bring your vision to life with our expert craftsmanship and design expertise at Retro Crafts India.</p>
 					</div>
 
 
@@ -2848,13 +2848,13 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-2 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Continuous Support</h3>
+							style="font-style:normal;font-weight:600">Ongoing Client Support</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
+							We provide continuous assistance to ensure your satisfaction with every piece you receive.</p>
 					</div>
 
 
@@ -2862,13 +2862,13 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-3 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">App Access</h3>
+							style="font-style:normal;font-weight:600">Online Access</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
+							Browse and customize our products through our user-friendly online platform.</p>
 					</div>
 				</div>
 
@@ -2883,13 +2883,13 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-4 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Consulting</h3>
+							style="font-style:normal;font-weight:600">Consultation Services</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
+							Get personalized advice on selecting the perfect furniture and décor for your space.</p>
 					</div>
 
 
@@ -2903,7 +2903,7 @@
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
+							From concept to completion, we manage every detail of your design project with precision.</p>
 					</div>
 
 
@@ -2911,13 +2911,13 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-6 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Architectural Solutions</h3>
+							style="font-style:normal;font-weight:600">Craftsmanship Excellence</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
+							Experience the perfect blend of artistry and functionality with our handcrafted furniture and décor.</p>
 					</div>
 				</div>
 			</div>
