RetroCraftsIndia: Minor updates
Signed-off-by: Mohd Faraz <androiabledroid@gmail.com>

--- a/404/index.html
+++ b/404/index.html
@@ -1857,6 +1857,10 @@
 			height: auto !important;
 		}
 
+		.text-align-justify {
+			text-align: justify !important;
+		}
+
 		:root :where(.wp-block-calendar.wp-block-calendar table:where(:not(.has-text-color)) th) {
 			background-color: var(--wp--preset--color--contrast-2);
 			color: var(--wp--preset--color--base);
