--- a/index.html
+++ b/index.html
@@ -2184,6 +2184,10 @@
 			height: auto !important;
 		}
 
+		.text-align-justify {
+			text-align: justify !important;
+		}
+
 		:root :where(.wp-block-calendar.wp-block-calendar table:where(:not(.has-text-color)) th) {
 			background-color: var(--wp--preset--color--contrast-2);
 			color: var(--wp--preset--color--base);
@@ -2742,8 +2746,9 @@
 				style="padding-top:var(--wp--preset--spacing--30);padding-right:0;padding-bottom:0;padding-left:0">
 				<div class="wp-block-group has-global-padding is-layout-constrained wp-container-core-group-is-layout-6 wp-block-group-is-layout-constrained"
 					style="margin-top:var(--wp--preset--spacing--30);margin-bottom:var(--wp--preset--spacing--30)">
-					<h1 class="wp-block-heading has-text-align-center fade-out-animation-scroll has-x-large-font-size">
-						Where Timeless Craftsmanship Meets Modern Elegance</h1>
+					<h1 class="wp-block-heading has-text-align-center fade-out-animation-scroll has-x-large-font-size"
+						id="h-where-timeless-craftsmanship-meets-modern-elegance">Where Timeless Craftsmanship Meets
+						Modern Elegance</h1>
 
 
 
@@ -2805,9 +2810,8 @@
 				style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--50);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--50);padding-left:var(--wp--preset--spacing--50)">
 				<div
 					class="wp-block-group is-vertical is-content-justification-center is-layout-flex wp-container-core-group-is-layout-8 wp-block-group-is-layout-flex">
-					<h2
-						class="wp-block-heading has-text-align-center is-style-asterisk no-scale-no-opacity fade-in-animation-scroll">
-						A passion for creating spaces</h2>
+					<h2 class="wp-block-heading has-text-align-center is-style-asterisk no-scale-no-opacity fade-in-animation-scroll"
+						id="h-a-passion-for-creating-spaces">A passion for creating spaces</h2>
 
 
 
@@ -2832,13 +2836,15 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-1 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Custom Furniture & Décor Design</h3>
+							id="h-custom-furniture-amp-decor-design" style="font-style:normal;font-weight:600">Custom
+							Furniture &amp; Décor Design</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Bring your vision to life with our expert craftsmanship and design expertise at Retro Crafts India.</p>
+							Bring your vision to life with our expert craftsmanship and design expertise at Retro Crafts
+							India.</p>
 					</div>
 
 
@@ -2846,13 +2852,15 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-2 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Ongoing Client Support</h3>
+							id="h-ongoing-client-support" style="font-style:normal;font-weight:600">Ongoing Client
+							Support</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							We provide continuous assistance to ensure your satisfaction with every piece you receive.</p>
+							We provide continuous assistance to ensure your satisfaction with every piece you receive.
+						</p>
 					</div>
 
 
@@ -2860,7 +2868,7 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-3 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Online Access</h3>
+							id="h-online-access" style="font-style:normal;font-weight:600">Online Access</h3>
 
 
 
@@ -2881,7 +2889,8 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-4 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Consultation Services</h3>
+							id="h-consultation-services" style="font-style:normal;font-weight:600">Consultation Services
+						</h3>
 
 
 
@@ -2895,13 +2904,13 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-5 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Project Management</h3>
+							id="h-project-management" style="font-style:normal;font-weight:600">Project Management</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							From concept to completion, we manage every detail of your design project with precision.</p>
+							Experience the fusion of imagination and expertise with Études Architectural Solutions.</p>
 					</div>
 
 
@@ -2909,13 +2918,15 @@
 					<div
 						class="wp-block-column is-layout-flow wp-container-core-column-is-layout-6 wp-block-column-is-layout-flow">
 						<h3 class="wp-block-heading has-text-align-left is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left has-body-font-family has-medium-font-size"
-							style="font-style:normal;font-weight:600">Craftsmanship Excellence</h3>
+							id="h-craftsmanship-excellence" style="font-style:normal;font-weight:600">Craftsmanship
+							Excellence</h3>
 
 
 
 						<p
 							class="has-text-align-left no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Experience the perfect blend of artistry and functionality with our handcrafted furniture and décor.</p>
+							Experience the perfect blend of artistry and functionality with our handcrafted furniture
+							and décor.</p>
 					</div>
 				</div>
 			</div>
@@ -2928,8 +2939,8 @@
 					class="wp-block-columns alignwide are-vertically-aligned-center is-layout-flex wp-container-core-columns-is-layout-3 wp-block-columns-is-layout-flex">
 					<div class="wp-block-column is-vertically-aligned-center is-layout-flow wp-block-column-is-layout-flow"
 						style="flex-basis:50%">
-						<h2 class="wp-block-heading no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-							Wood Top Brass Plated Stool</h2>
+						<h2 class="wp-block-heading no-scale-no-opacity fade-in-animation-scroll transform-origin-left"
+							id="h-wood-top-brass-plated-stool">Wood Top Brass Plated Stool</h2>
 
 
 
@@ -2970,9 +2981,8 @@
 					class="wp-block-group alignwide has-global-padding is-layout-constrained wp-container-core-group-is-layout-12 wp-block-group-is-layout-constrained">
 					<div
 						class="wp-block-group is-vertical is-content-justification-center is-layout-flex wp-container-core-group-is-layout-11 wp-block-group-is-layout-flex">
-						<h2
-							class="wp-block-heading has-text-align-center is-style-asterisk no-scale-no-opacity fade-in-animation-scroll">
-							An array of resources</h2>
+						<h2 class="wp-block-heading has-text-align-center is-style-asterisk no-scale-no-opacity fade-in-animation-scroll"
+							id="h-an-array-of-resources">An array of resources</h2>
 
 
 
@@ -2991,9 +3001,8 @@
 						class="wp-block-columns alignwide is-layout-flex wp-container-core-columns-is-layout-4 wp-block-columns-is-layout-flex">
 						<div class="wp-block-column is-vertically-aligned-center is-layout-flow wp-block-column-is-layout-flow"
 							style="flex-basis:40%">
-							<h3
-								class="wp-block-heading is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left">
-								T-Light Candle Show Piece</h3>
+							<h3 class="wp-block-heading is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-left"
+								id="h-t-light-candle-show-piece">T-Light Candle Show Piece</h3>
 
 
 
@@ -3046,9 +3055,8 @@
 
 						<div class="wp-block-column is-vertically-aligned-center is-layout-flow wp-block-column-is-layout-flow"
 							style="flex-basis:40%">
-							<h3
-								class="wp-block-heading is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-right">
-								Brass Plated Stool</h3>
+							<h3 class="wp-block-heading is-style-asterisk no-scale-no-opacity fade-in-animation-scroll transform-origin-right"
+								id="h-brass-plated-stool">Brass Plated Stool</h3>
 
 
 
